--- a/rottenTomatoes.html
+++ b/rottenTomatoes.html
@@ -5,11 +5,7 @@
     <script type="text/javascript" src="http://github.com/downloads/fitzgen/wu.js/wu-0.1.8.min.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-    <style>
-      #chart{float:left; width:65%; height:500px}
-      #variables{float:left; width: 25%}
-      #loading{position:fixed; top:0; left:0; bottom:0; right:0;background-color:white;opacity:0.5; margin:100px 100px; font-size:40px;}
-    </style>
+    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/MrP/demos/master/rottenTomatoes.css">
   </head>
   <body>
     <div id="chart"></div>
