--- a/rottenTomatoes.html
+++ b/rottenTomatoes.html
@@ -6,6 +6,9 @@
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/MrP/demos/master/rottenTomatoes.css">
+    <script type="text/template" id="variableTemplate">
+      <input type="radio" id="<%=variableId%>" name="variableRadios" /><label for="<%=variableId%>"><%=label%></label>
+    </script>
   </head>
   <body>
     <div id="chart"></div>
