--- a/rottenTomatoes.html
+++ b/rottenTomatoes.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="http://github.com/downloads/fitzgen/wu.js/wu-0.1.8.min.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://raw.githubusercontent.com/MrP/demos/master/rottenTomatoes.css">
+    <link type="text/css" rel="stylesheet" href="http://rawgit.com/MrP/demos/master/rottenTomatoes.css">
     <script type="text/template" id="variableTemplate">
       <br><input type="radio" id="<%=variableId%>" name="variableRadios" /><label for="<%=variableId%>"><%=label%></label>
     </script>
@@ -14,6 +14,6 @@
     <div id="chart"></div>
     <div id="variables">Rotten Tomatoes scores of movies currently in theatres</div>
     <div id="loading">Loading data...</div>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/MrP/demos/master/rottenTomatoes.js"></script>
+    <script type="text/javascript" src="http://rawgit.com/MrP/demos/master/rottenTomatoes.js"></script>
   </body>
 </html>
