--- a/jumpingGame.html
+++ b/jumpingGame.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <link type="text/css" rel="stylesheet" href="jumpingGame.css">
+        <script type="text/javascript" src="jumpingGameDOMRenderer.js"></script>
     </head>
     <body>
         <div id="hud">
@@ -15,7 +16,6 @@
         </div>
         <div id="game">
         </div>
-        <canvas id="canvas" width="320px" height="400px"></canvas>
         <script type="text/javascript" src="jumpingGame.js"></script>
     </body>
 </html>
