--- a/jumpingGame/jumpingGame.html
+++ b/jumpingGame/jumpingGame.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
         <link type="text/css" rel="stylesheet" href="jumpingGame.css">
         <script type="text/javascript" src="jumpingGameDOMRenderer.js"></script>
+        <script type="text/javascript" src="jumpingGameInteraction.js"></script>
     </head>
     <body>
         <div id="game">
