--- a/jumpingGame/jumpingGame.html
+++ b/jumpingGame/jumpingGame.html
@@ -2,11 +2,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
         <link type="text/css" rel="stylesheet" href="jumpingGame.css">
-        <script type="text/javascript" src="jumpingGameDOMRenderer.js"></script>
-        <script type="text/javascript" src="jumpingGameInteraction.js"></script>
+        <script type="text/javascript" data-main="jumpingGame" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
     </head>
     <body>
         <div id="game">
