--- a/rottenTomatoes/rottenTomatoesAngular.html
+++ b/rottenTomatoes/rottenTomatoesAngular.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>.ng-cloak { display:none; }</style>
     <link type="text/css" rel="stylesheet" href="rottenTomatoesAngular.css">
     <script type="text/javascript" data-main="rottenTomatoesAngular" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
   </head>
-  <body ng-app="rottenTomatoesApp" ng-cloak>
+  <body ng-app="rottenTomatoesApp">
     <div id="loading" ng-controller="LoadingCtrl">
       Loading data<span ng-bind="loader"></span>
     </div>
@@ -13,9 +14,9 @@
     <div id="variables" ng-controller="VariableListCtrl">
       <h3>Rotten Tomatoes scores of movies currently in theatres</h3>
       <ul>
-        <li ng-repeat="(id, variable) in variables">
+        <li ng-repeat="(id, variable) in variables" class="ng-cloak">
           <label>
-            <input type="radio" ng-model="$parent.selectedVariableId" name="selectedVariableId" ng-value="id" ng-change="$parent.change(id)" />
+            <input type="radio" ng-model="$parent.selectedVariable.id" name="selectedVariableId" ng-value="id" />
             <span ng-bind="variable.label"></span>
           </label>
         </li>
