--- a/rottenTomatoes/rottenTomatoesBackbone.html
+++ b/rottenTomatoes/rottenTomatoesBackbone.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style>.ng-cloak { display:none; }</style>
-    <link type="text/css" rel="stylesheet" href="rottenTomatoesAngular.css">
+    <link type="text/css" rel="stylesheet" href="rottenTomatoes.css">
     <script type="text/javascript" data-main="rottenTomatoesAngular" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
   </head>
   <body ng-app="rottenTomatoesApp">
