--- a/helloWorldPuzzle/index.html
+++ b/helloWorldPuzzle/index.html
@@ -8,10 +8,12 @@
         margin-right: auto;
         margin-bottom: 100px;
         font-family: Helvetica;
+        padding: 20px;
     }
     pre {
         border: solid;
         padding: 20px;
+        overflow-x: auto;
     }
     </style>
     <script>
