--- a/jumpingGame/jumpingGame.html
+++ b/jumpingGame/jumpingGame.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet/less" type="text/css" href="jumpingGame.css" />
     <script type="text/javascript" src="less-1.7.3.min.js"></script>
-    <script type="text/javascript" data-main="jumpingGame" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
+    <script type="text/javascript" data-main="jumpingGame" 
+    src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"
+    ></script>
 </head>
 
 <body>
