--- a/rottenTomatoes/rottenTomatoes.html
+++ b/rottenTomatoes/rottenTomatoes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://github.com/downloads/fitzgen/wu.js/wu-0.1.8.min.js"></script>
-    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/github.com/downloads/fitzgen/wu.js/wu-0.1.8.min.js"></script>
+    <script type="text/javascript" src="//www.google.com/jsapi"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <link type="text/css" rel="stylesheet" href="rottenTomatoes.css">
     <script type="text/template" id="variableTemplate">
       <br><input type="radio" id="<%=variableId%>" name="variableRadios" /><label for="<%=variableId%>"><%=label%></label>
